pipeline/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network.jpe2b.dcnw.rakuten
  namespace: ecbs-gfp-frontend
spec:
  podSelector:
    matchLabels:
      networkpolicy.ecbs-bos.rakuten/network-policy: allow
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 80
          protocol: TCP
      to:
        - ipBlock:
            cidr: 100.99.126.0/24
